--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ num-bigint = "0.3.1"
 # Used for schema traversals
 downcast-rs = "1.2"
 derive_more = "0.99.11"
+dyn-clone = "1.0.4"
+tia = "1.0.0"
