--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,9 @@ downcast-rs = "1.2"
 derive_more = "0.99.11"
 dyn-clone = "1.0.4"
 tia = "1.0.0"
+tokio = { version = "1.0", features = ["full"] }
+futures = "0.3.12"
+serde = { version = "1.0.119", features = ["derive"] }
+
+[dev-dependencies]
+async-trait = "0.1"
