Problem: start and event events by themselves are not useful
The amount of practical workflows we can build out of them is *very*
limited (only degenerative cases).

Solution: implement `parallelGateway`

This gateway allows forking and joining workflows.

As an added means of testing, `intermediateThrowEvent` with support for
throwing only `NoneEvent` was implemented. The idea here is that I
ideally want tests to rely less on `process::Log` and more on
event::ProcessEvent as these are externally observable and are
documented in specification. `process::Log` is rather an internal
observation tool.

I also added `crate::test::log_broadcast` helper that makes it easy to
print out any messages received on broadcast channels in a separate
task. This is useful for debugging tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ tia = "1.0.0"
 tokio = { version = "1.0", features = ["full"] }
 futures = "0.3.12"
 serde = { version = "1.0.119", features = ["derive"] }
-smallvec = "1.6.1"
+smallvec = { version = "1.6.1", features = ["serde"] }
 
 [dev-dependencies]
 async-trait = "0.1"
