Problem: programmatic creation of definitions
As one can see in tests, creating definitions is rather cumbersome. One
must follow a non-trivial sequence of manipulations to see the
high-level picture. This is hard to read and change.

Solution: introduce conveniences for single place declarations

Firstly, I've converted creation of structures from `Default::default()`
and mutating them after that to one-step declarations `{ id: Some(...),
..Default::default() }`.

Then, I've introduced [`Process::establish_sequence_flow`] that allows
to establish sequence flow by given IDs. This was not a trivial addition
as it required an addition of `intertrait` crate that allows to cast
between traits (as opposed to `downcast-rs` which downcasts to concrete
types) so that `dyn DocumentElement` can be casted to `dyn FlowNodeTypeMut`.
This also required an addition of [`DocumentElement::find_by_id_mut`]. I
am pretty sure these additions will be useful later down the road
anyway. I've also now requred `...TypeMut` traits to implement `...Type`
for simplifications.

Then, I also added auto-generation of `From<_>` for sub-elements of
abstract elements so that we don't need to type something like
`RootElement::Process(Process { .. })` and instead, we can simply do
`Process { .. }.into()`.

I've rewritten existing tests to use this style before it's too late.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ thiserror = "1.0"
 num-bigint = "0.3.1"
 # Used for schema traversals
 downcast-rs = "1.2"
+# Used for casting between traits
+intertrait = "0.2"
+# Used for intertrait
+linkme = "0.2"
 derive_more = "0.99.11"
 dyn-clone = "1.0.4"
 tia = "1.0.0"
