--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,35 +9,16 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
-defaults:
-  strategy:
-    fail-fast: false
-    matrix:
-      toolchain: ['1.48.0', '1.49.0', 'stable', 'nightly']
-
 jobs:
-  check:
-    name: Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
-
-      - name: Install ${{matrix.toolchain}} toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: ${{matrix.toolchain}}
-          override: true
-
-      - name: Run cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-
   test:
     name: Test Suite
     runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        toolchain: ['1.48.0', '1.49.0', 'stable', 'nightly']
+
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
@@ -57,6 +38,12 @@ jobs:
   lints:
     name: Lints
     runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        toolchain: ['stable', 'nightly']
+
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
