--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,10 @@ tokio = { version = "1.0", features = ["full"] }
 futures = "0.3.12"
 serde = { version = "1.0.119", features = ["derive"] }
 smallvec = { version = "1.6.1", features = ["serde"] }
+rhai = { version = "0.19.10", features = ["sync", "serde"], optional = true }
 
 [dev-dependencies]
 async-trait = "0.1"
+
+[features]
+default = ["rhai"]
