--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,10 @@ rhai = { version = "0.19.10", features = ["sync", "serde"], optional = true }
 [dev-dependencies]
 async-trait = "0.1"
 serde_yaml = "0.8"
+serde_json = "1.0"
+toml = "0.5"
+ron = "0.6"
+rmp-serde = "0.15"
 
 [features]
 default = ["rhai"]
