Problem: bpxe crate hasn't been claimed yet
Solution: prepare first release

I am getting pretty happy and confident about this version of BPXE so I
am going to celebrate this with a first release and claim crate name for
it.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "bpxe"
-version = "0.1.0"
+version = "0.1.0-dev"
 authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
 edition = "2018"
-
+license = "Apache-2.0"
+keywords = ["bpmn", "workflow"]
+repository = "https://github.com/bpxe/bpxe"
+readme = "README.md"
+description = "Business Process eXecution Engine"
 
 [dependencies]
 # Used to parse BPMN to a typed schema
