--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bpxe"
-version = "0.1.0-dev"
+version = "0.1.0"
 authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0"
