--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,8 @@ jobs:
     name: Test Suite
     runs-on: ubuntu-latest
 
+    timeout-minutes: 30
+
     strategy:
       fail-fast: false
       matrix:
