Problem: long compile times
This makes edit-compile-test cycle annoying long, which makes it harder
to move quickly. It can take about 30 seconds to recompile for another
test run, and sometimes as long as 1 minute 20 seconds.

Solution: split out BPMN schema into a separate crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,43 +1,2 @@
-[package]
-name = "bpxe"
-version = "0.1.2-dev"
-authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
-edition = "2018"
-license = "Apache-2.0"
-keywords = ["bpmn", "workflow"]
-repository = "https://github.com/bpxe/bpxe"
-readme = "README.md"
-description = "Business Process eXecution Engine"
-
-[dependencies]
-# Used to parse BPMN to a typed schema
-strong-xml = "0.6.0"
-# Used to 'normalize' BPMN XML before parsing
-# due to deficiencies of strong-xml
-sxd-document = "0.3.2"
-thiserror = "1.0"
-num-bigint = { version = "0.3.1", features = ["serde"] }
-# Used for schema traversals
-downcast-rs = "1.2"
-# Used for casting between traits
-intertrait = "0.2"
-# Used for intertrait
-linkme = "0.2"
-dyn-clone = "1.0.4"
-tia = "1.0.0"
-tokio = { version = "1.0", features = ["full"] }
-futures = "0.3.12"
-serde = { version = "1.0.119", features = ["derive"] }
-smallvec = { version = "1.6.1", features = ["serde"] }
-rhai = { version = "0.19.10", features = ["sync", "serde"], optional = true }
-
-[dev-dependencies]
-async-trait = "0.1"
-serde_yaml = "0.8"
-serde_json = "1.0"
-toml = "0.5"
-ron = "0.6"
-rmp-serde = "0.15"
-
-[features]
-default = ["rhai"]
+[workspace]
+members = ["bpxe", "bpxe-bpmn-schema"]
