--- a/release.toml
+++ b/release.toml
@@ -1,9 +1,3 @@
 dev-version-ext = "dev"
-pre-release-replacements = [
-  {file="README.md", search="bpxe = .*", replace="{{crate_name}} = \"{{version}}\""},
-  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
-  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", min=0, max=1},
-  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
-  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
-  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/bpxe/bpxe/compare/{{tag_name}}...HEAD", exactly=1},
-]
+pre-release-commit-message = "release {{crate_name}} {{version}}"
+post-release-commit-message="Released {{crate_name}} {{version}}, starting {{next_version}}"
