--- a/bpxe/Cargo.toml
+++ b/bpxe/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bpxe"
-version = "0.1.2-dev"
+version = "0.1.2"
 authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0"
@@ -10,7 +10,7 @@ readme = "README.md"
 description = "Business Process eXecution Engine"
 
 [dependencies]
-bpxe-bpmn-schema = { path = "../bpxe-bpmn-schema", version = "0.1.2-dev" }
+bpxe-bpmn-schema = { path = "../bpxe-bpmn-schema", version = "0.1.2" }
 # Used to parse BPMN to a typed schema
 strong-xml = "0.6.0"
 # Used to 'normalize' BPMN XML before parsing
