--- a/bpxe-bpmn-schema/Cargo.toml
+++ b/bpxe-bpmn-schema/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bpxe-bpmn-schema"
-version = "0.1.2"
+version = "0.1.3-dev"
 authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0"
