Problem: can't do much of anything useful
BPXE currently has some gateways but there's no way to perform any
activity.

Solution: implement `scriptTask`

While I think that `scriptTask` use should be limited (it hides and
obscures logic away from the BPMN diagram), it's a great tool for
testing BPXE so I decided to implement it first.

This change also involved fixing XML parsing for `script` element as
well as further improvements to the `language` model.

There is no common activity behaviour (such as loop characteristics,
input/output, properties) but that'll come soon.

--- a/bpxe/Cargo.toml
+++ b/bpxe/Cargo.toml
@@ -31,6 +31,7 @@ serde = { version = "1.0.119", features = ["derive"] }
 smallvec = { version = "1.6.1", features = ["serde"] }
 rhai = { version = "0.19.10", features = ["sync", "serde"], optional = true }
 async-trait = "0.1"
+factory = "0.1.2"
 
 [dev-dependencies]
 serde_yaml = "0.8"
