--- a/bpxe-bpmn-schema/Cargo.toml
+++ b/bpxe-bpmn-schema/Cargo.toml
@@ -22,4 +22,6 @@ intertrait = "0.2"
 linkme = "0.2"
 dyn-clone = "1.0.4"
 tia = "1.0.0"
+# Affix `syn` to this version until https://github.com/usagi/tia/pull/3 is resolved
+syn = "=1.0.59"
 serde = { version = "1.0.119", features = ["derive"] }
