Problem: exact `syn` dependency
This will prevent us from using newer versions of `syn`. This exact
version requirements was introduced recently in d858518 because of `tia`
being broken by 1.0.60

Solution: use newer version of `tia`

https://github.com/usagi/tia/pull/3 has been merged so it should be safe
now to use `syn` >= 1.0.60

--- a/bpxe-bpmn-schema/Cargo.toml
+++ b/bpxe-bpmn-schema/Cargo.toml
@@ -21,7 +21,6 @@ intertrait = "0.2"
 # Used for intertrait
 linkme = "0.2"
 dyn-clone = "1.0.4"
-tia = "1.0.0"
-# Affix `syn` to this version until https://github.com/usagi/tia/pull/3 is resolved
-syn = "=1.0.59"
+tia = "1.0.1"
+syn = "1.0.60"
 serde = { version = "1.0.119", features = ["derive"] }
