Problem: unknown WebAssembly build status
As of #10, it *should* be able to compile, but we don't know that for a fact.

Solution: instrument Cargo.tomls to be able to build for WebAssembly

Firstly, had to reduce the scope of features for Tokio (that's a good thing to
do, anyway) to make it able to compile for WebAssembly (networking and other
I/O is a no-go).

Secondly, had to add `cdylib` crate type.

At this point, I was not yet able to run tests, but at the very least we can
check that it *builds* and I've added a "wasm" job to GitHub Actions workflows
to check for that as well.

--- a/bpxe/Cargo.toml
+++ b/bpxe/Cargo.toml
@@ -21,7 +21,7 @@ thiserror = "1.0"
 downcast-rs = "1.2"
 dyn-clone = "1.0.4"
 tia = "1.0.0"
-tokio = { version = "1.1", features = ["full"] }
+tokio = { version = "1.1", features = ["macros", "rt-multi-thread", "time", "sync"] }
 futures = "0.3.12"
 serde = { version = "1.0.119", features = ["derive"] }
 smallvec = { version = "1.6.1", features = ["serde"] }
@@ -37,5 +37,15 @@ toml = "0.5"
 ron = "0.6"
 rmp-serde = "0.15"
 
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = "0.2"
+
 [features]
 default = ["rhai"]
+
+[lib]
+crate-type = ["cdylib","lib"]
+
+[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
+version = "1.1"
+features = ["macros","rt","time","sync"]
