--- a/bpxe-bpmn-schema/Cargo.toml
+++ b/bpxe-bpmn-schema/Cargo.toml
@@ -20,3 +20,9 @@ dyn-clone = "1.0.4"
 tia = "1.0.1"
 syn = "1.0.60"
 serde = { version = "1.0.119", features = ["derive"] }
+
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = "0.2"
+
+[lib]
+crate-type = ["cdylib","lib"]
