--- a/bpxe/Cargo.toml
+++ b/bpxe/Cargo.toml
@@ -29,10 +29,12 @@ rhai = { version = "0.19.10", features = ["sync", "serde"], optional = true }
 async-trait = "0.1"
 factory = "0.1.2"
 num-bigint = { version = "0.3.1", features = ["serde"] }
+serde_json = "1.0"
+streamunordered = "0.5.1"
+derive_more = "0.99.11"
 
 [dev-dependencies]
 serde_yaml = "0.8"
-serde_json = "1.0"
 toml = "0.5"
 ron = "0.6"
 rmp-serde = "0.15"
