--- a/bpxe/Cargo.toml
+++ b/bpxe/Cargo.toml
@@ -32,6 +32,7 @@ num-bigint = { version = "0.3.1", features = ["serde"] }
 serde_json = "1.0"
 streamunordered = "0.5.1"
 derive_more = "0.99.11"
+instant = "0.1.9"
 
 [dev-dependencies]
 serde_yaml = "0.8"
