Problem: not sure if it is possible to run in the browser
Solution: abstract `task` and select one right for the target

The abstraction is located in `crate::sys::task`

This maps `spawn` and `spawn_blocking` on WASM to
`wasm_bindgen_futures::spawn_local`. The former is perhaps the right
choice but it's not perfect for `spawn_blocking` that'll *actually*
block.

This change introduces a new crate (bpxe-internal-macros) that adds its
own `#[bpxe_internal_macros]` attribute that will pick the correct
attributes and whatever other necessary setup to run a test on a target.

In order to make tests run I had to develop a simplistic single-threaded
executor for WASM. It's using a lot of unsafe code, but it seems to
work so far. I had to disable some tests because they aren't designed to
be run in a single-threaded environment.

This change brings some crude JS API for BPXE that allows some
experimentation. It can be demoed using examples/bpxe_wasm_demo

--- a/bpxe-bpmn-schema/Cargo.toml
+++ b/bpxe-bpmn-schema/Cargo.toml
@@ -9,7 +9,11 @@ repository = "https://github.com/bpxe/bpxe"
 readme = "README.md"
 description = "Business Process eXecution Engine's BPMN schema"
 
+[lib]
+crate-type = ["cdylib","lib"]
+
 [dependencies]
+bpxe-internal-macros = { path = "../bpxe-internal-macros", version = "^0.2.1-dev"}
 thiserror = "1.0"
 # Used to parse BPMN to a typed schema
 strong-xml = "0.6.0"
@@ -22,8 +26,10 @@ syn = "1.0.60"
 serde = { version = "1.0.119", features = ["derive"] }
 derive_more = "0.99.11"
 
-[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
-wasm-bindgen-test = "0.2"
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2"
 
-[lib]
-crate-type = ["cdylib","lib"]
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = "0.3"
+web-sys = { version = "0.3", features = ["console"] }
+console_error_panic_hook = "0.1.6"
