--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  WASM_BINDGEN_TEST_TIMEOUT: 240 
 
 jobs:
   test:
@@ -36,42 +37,6 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-
-  wasm:
-    name: WebAssembly
-    runs-on: ubuntu-latest
-
-    timeout-minutes: 30
-
-    strategy:
-      matrix:
-        toolchain: ['stable']
-
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
-
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '12'
-
-      - name: Install ${{matrix.toolchain}} toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          target: wasm32-unknown-unknown
-          toolchain: ${{matrix.toolchain}}
-          override: true
-
-      - name: Install wasm-pack
-        uses: jetli/wasm-pack-action@v0.3.0
-        with:
-          version: 'latest'
-
-      - name: Check if it builds
-        run: |-
-          cd bpxe && wasm-pack build
 
   lints:
     name: Lints
