--- a/bpxe/release.toml
+++ b/bpxe/release.toml
@@ -1,6 +1,7 @@
 pre-release-replacements = [
   {file="../README.md", search="bpxe = .*", replace="{{crate_name}} = \"{{version}}\""},
   {file="Cargo.toml", search="bpxe-bpmn-schema = .*",replace="bpxe-bpmn-schema = { path = \"../bpxe-bpmn-schema\", version = \"{{version}}\" }"},
+  {file="Cargo.toml", search="bpxe-internal-macros = .*",replace="bpxe-internal-macros = { path = \"../bpxe-internal-macros\", version = \"{{version}}\" }"},
   {file="../CHANGELOG.md", search="Unreleased", replace="{{version}}"},
   {file="../CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", min=0, max=1},
   {file="../CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
