Problem: failing deprecation notice lint
cargo clippy fails with:

```
error: use of deprecated associated function `streamunordered::StreamUnordered::<S>::push`: Prefer StreamUnordered::insert
   --> bpxe/src/activity/mod.rs:152:46
    |
152 |             flow_node_tokens.push(flow_nodes.push(activity));
    |                                              ^^^^
    |
    = note: `-D deprecated` implied by `-D warnings`
```

Solution: use the new API

The change was introduced here https://github.com/jonhoo/streamunordered/commit/cd203a48c3cd566b34840d16a6ab439ac618da73

--- a/bpxe/Cargo.toml
+++ b/bpxe/Cargo.toml
@@ -30,7 +30,7 @@ async-trait = "0.1"
 factory = "0.1.2"
 num-bigint = { version = "0.3.1", features = ["serde"] }
 serde_json = "1.0"
-streamunordered = "0.5.1"
+streamunordered = "^0.5.2"
 derive_more = "0.99.11"
 instant = "0.1.9"
 
