Problem: 1.49.0 is increasingly becoming a new MSRV
smallvec, Rhai, are all starting to use new features from 1.49.0

Solution: drop 1.48.0 from the test matrix

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        toolchain: ['1.48.0', '1.49.0', 'stable', 'nightly']
+        toolchain: ['1.49.0', 'stable', 'nightly']
 
     steps:
       - name: Checkout sources
