Problem: wasm example setup is somewhat convoluted
It requires bulding two versions of the wasm crate for bpxe.js,
use of globals, etc.

Solution: switch to a simpler async wasm module initialization
using Webpack 5

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,16 +1,11 @@
-[tasks.bpxe-js-wasm-web]
-command = "wasm-pack"
-args = ["build", "--release", "--target", "no-modules", "-d", "pkg/web", "bpxe"]
-
 [tasks.bpxe-js-wasm]
 command = "wasm-pack"
 args = ["build", "--release", "bpxe"]
 
 [tasks.bpxe-js]
-dependencies = ["bpxe-js-wasm", "bpxe-js-wasm-web"]
+dependencies = ["bpxe-js-wasm"]
 script = [
    "cp bpxe/pkg/bpxe_bg* bpxe/pkg/bpxe.js bpxe/pkg/bpxe.d.ts bpxe.js",
-   "cp -R bpxe/pkg/web bpxe.js"
 ]
 
 [tasks.js]
