--- a/examples/bpxe_wasm_demo/package.json
+++ b/examples/bpxe_wasm_demo/package.json
@@ -1,38 +1,19 @@
 {
-  "name": "create-wasm-app",
-  "version": "0.1.0",
-  "description": "create an app to consume rust-generated wasm packages",
+  "name": "bpxe-demo",
   "main": "index.js",
-  "bin": {
-    "create-wasm-app": ".bin/create-wasm-app.js"
-  },
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start": "webpack-dashboard -- webpack-dev-server"
+    "start": "webpack serve"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rustwasm/create-wasm-app.git"
-  },
-  "keywords": [
-    "webassembly",
-    "wasm",
-    "rust",
-    "webpack"
-  ],
-  "bugs": {
-    "url": "https://github.com/rustwasm/create-wasm-app/issues"
-  },
-  "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "dependencies": {
     "bpxe": "file:../../bpxe.js"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^5.0.0",
+    "copy-webpack-plugin": "^7",
     "raw-loader": "^4.0.2",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.1.0",
-    "webpack-dashboard": "^3.3.1",
-    "webpack-dev-server": "^3.1.5"
+    "webpack": "^5",
+    "webpack-cli": "^4",
+    "webpack-dev-server": "^3.11.2",
+    "worker-loader": "^3.0.7"
   }
 }
