--- a/bpxe/Cargo.toml
+++ b/bpxe/Cargo.toml
@@ -39,6 +39,7 @@ derive_more = "0.99.11"
 instant = "0.1.9"
 wasm-rs-dbg = "0.1.0"
 wasm-rs-async-executor = { version = "^0.4.1", features = ["debug"] }
+num-traits = "0.2.14"
 
 [dev-dependencies]
 serde_yaml = "0.8"
