Problem: no CI tests for WebAssembly
Solution: ensure BPXE can run under WASI and Browser

This change also removes `wasm-executor` feature which was intended to
be used for testing BPXE code with wasm-executor, but isn't it better to
actually test it in an actual WebAssembly environment?

GitHub Actions, however, seems to hang on tests when they executed in a
browser (this has been the case before) so the CI steps for that are
disabled for now. At least we're testing WASI-flavoured build now.

--- a/bpxe-bpmn-schema/Cargo.toml
+++ b/bpxe-bpmn-schema/Cargo.toml
@@ -26,10 +26,10 @@ syn = "1.0.60"
 serde = { version = "1.0.119", features = ["derive"] }
 derive_more = "0.99.11"
 
-[target.'cfg(target_arch = "wasm32")'.dependencies]
+[target.wasm32-unknown-unknown.dependencies]
 wasm-bindgen = "0.2"
 
-[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+[target.wasm32-unknown-unknown.dev-dependencies]
 wasm-bindgen-test = "0.3"
 web-sys = { version = "0.3", features = ["console"] }
 console_error_panic_hook = "0.1.6"
