--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -70,3 +70,49 @@ jobs:
         with:
           command: clippy
           args: -- -D warnings
+
+  wasm:
+    name: WebAssembly
+    runs-on: ubuntu-latest
+
+    timeout-minutes: 30
+
+    strategy:
+      matrix:
+        toolchain: ['stable']
+
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v2
+
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+
+      - name: Install ${{matrix.toolchain}} toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          target: wasm32-wasi
+          toolchain: ${{matrix.toolchain}}
+          override: true
+
+      - name: Install wasm-pack
+        uses: jetli/wasm-pack-action@v0.3.0
+        with:
+          version: 'latest'
+
+      - name: Use wasmtime 0.23.0
+        uses: mwilliamson/setup-wasmtime-action@v1
+        with:
+          wasmtime-version: "0.23.0"
+      
+      - name: Check if it tests under wasmtime
+        run: |-
+          cargo test --target wasm32-wasi --all-features
+
+      - name: Check if it tests under Chrome
+        run: |-
+         echo SKIP wasm-pack test --chrome --headless bpxe -- --all-features
+         echo SKIP wasm-pack test --chrome --headless bpxe-bpmn-schema -- --all-features
