--- a/bpxe/Cargo.toml
+++ b/bpxe/Cargo.toml
@@ -37,8 +37,8 @@ serde_json = "1.0"
 streamunordered = "^0.5.2"
 derive_more = "0.99.11"
 instant = "0.1.9"
-wasm-rs-dbg = "0.1.0"
-wasm-rs-async-executor = { version = "^0.8.0", features = ["debug"] }
+wasm-rs-dbg = "^0.1.2"
+wasm-rs-async-executor = { version = "^0.8.1", features = ["debug"] }
 num-traits = "0.2.14"
 
 [dev-dependencies]
@@ -48,7 +48,7 @@ ron = "0.6"
 rmp-serde = "0.15"
 pin-project = "1"
 
-[target.'cfg(target_arch = "wasm32")'.dependencies]
+[target.wasm32-unknown-unknown.dependencies]
 console_error_panic_hook = "0.1.6"
 wasm-rs-shared-channel = "0.1.0"
 wasm-bindgen-futures = "0.4.20"
@@ -56,12 +56,12 @@ wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 js-sys = "0.3"
 web-sys = { version = "0.3", features = ["console", "DedicatedWorkerGlobalScope"] }
 tokio = { version = "1.1", features = ["macros", "time", "sync"] }
-data-url-encode-macro = "1.0.1"
 
-[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+[target.wasm32-wasi.dependencies]
+tokio = { version = "1.1", features = ["macros", "time", "sync"] }
+
+[target.wasm32-unknown-unknown.dev-dependencies]
 wasm-bindgen-test = "0.3"
-console_error_panic_hook = "0.1.6"
 
 [features]
 default = ["rhai"]
-wasm-executor = []
