--- a/bpxe-internal-macros/Cargo.toml
+++ b/bpxe-internal-macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bpxe-internal-macros"
-version = "0.2.1-dev"
+version = "0.2.1"
 authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0"
