--- a/bpxe-bpmn-schema/Cargo.toml
+++ b/bpxe-bpmn-schema/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bpxe-bpmn-schema"
-version = "0.2.1-dev"
+version = "0.2.1"
 authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0"
@@ -13,7 +13,7 @@ description = "Business Process eXecution Engine's BPMN schema"
 crate-type = ["cdylib","lib"]
 
 [dependencies]
-bpxe-internal-macros = { path = "../bpxe-internal-macros", version = "^0.2.1-dev"}
+bpxe-internal-macros = { path = "../bpxe-internal-macros", version = "0.2.1" }
 thiserror = "1.0"
 # Used to parse BPMN to a typed schema
 strong-xml = "0.6.0"
