--- a/bpxe/Cargo.toml
+++ b/bpxe/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bpxe"
-version = "0.2.1"
+version = "0.2.2-dev"
 authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0"
@@ -13,8 +13,8 @@ description = "Business Process eXecution Engine"
 crate-type = ["cdylib","lib"]
 
 [dependencies]
-bpxe-bpmn-schema = { path = "../bpxe-bpmn-schema", version = "0.2.1" }
-bpxe-internal-macros = { path = "../bpxe-internal-macros", version = "0.2.1" }
+bpxe-bpmn-schema = { path = "../bpxe-bpmn-schema", version = "0.2.2-dev" }
+bpxe-internal-macros = { path = "../bpxe-internal-macros", version = "0.2.2-dev" }
 # Used to parse BPMN to a typed schema
 strong-xml = "0.6.0"
 # Used to 'normalize' BPMN XML before parsing
